# qigong

./: ChangeLog  Makefile  Makefile-binonly  Makefile.am  README  TODO  acinclude.m4  chikung.dox  colfreq.h  configure.ac  crtelnet.8  crtelnet.cpp  documentation.dox  dodoc  grbitmap.cpp  grbitmap.h  hex2base64.cpp  installscript  jeuchar.c  jeuchar.h  manifest  mysql.m4  pngmembuf.cpp  pngmembuf.h  qicollect.8  qicollect.cpp  qicollect.h  qicollect.hcpp  qicollect.rc.proto  qicommon.h  qiconn.cpp  qiconn.h  qicrypt.cpp  qicrypt.h  qigenkey.8  qigenkey.cpp  qigong.8  qigong.cpp  qigong.dox.proto  qigong.h  (+9 more)
DEBIAN-common/: copyright
DEBIAN-qicollect/: changelog.Debian  conffiles  control.precise  control.squeeze  control.wheezy  postinst  postrm  prerm
DEBIAN-qigong-full/: changelog.Debian  control.lucid  control.precise  control.squeeze  control.wheezy  postinst
DEBIAN-qigong-nomc/: changelog.Debian  conffiles  control  postrm  prerm
debian-src/debian-quilt/qigong-1.10.5/debian/: changelog  qicollect.postrm  qigong-full.prerm
debian-src/debian-quilt/qigong-1.10.6/debian/: changelog
debian-src/debian-quilt/qigong-1.10.8/debian/: changelog
debian-src/debian-quilt/qigong-1.10.8/debian/patches/: debianisation-test-on-qigenkey
debian-src/debian-quilt/qigong-1.10.9/debian/: changelog
debian-src/lucid-quilt/qigong-1.10.10/debian/: changelog  control  rules
debian-src/lucid-quilt/qigong-1.10.5/debian/: changelog
debian-src/lucid-quilt/qigong-1.10.6/debian/: changelog
debian-src/lucid-quilt/qigong-1.10.8/debian/: changelog  control  copyright  qicollect.postinst
debian-src/lucid-quilt/qigong-1.10.9/debian/: changelog
debian-src/precise-quilt/qigong-1.10.5/debian/: changelog  qigong-nomc.postinst
debian-src/precise-quilt/qigong-1.10.6/debian/: changelog
debian-src/precise-quilt/qigong-1.10.8/debian/: changelog  qicollect.prerm
debian-src/precise-quilt/qigong-1.10.9/debian/: changelog  qigong-nomc.postinst
debian-src/trusty-quilt/qigong-1.10.10/debian/: changelog  control  qigong-nomc.postrm  rules
debian-src/trusty-quilt/qigong-1.10.8/debian/: changelog
debian-src/trusty-quilt/qigong-1.10.9/debian/: changelog
debian-src/trusty-quilt/qigong-1.10.9/debian/patches/: series
